<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context=".Add_Event_Activity">

    <EditText
        android:id="@+id/nomevt"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:background="#00000000"
        android:hint="Nom de l'événement"
        android:inputType="text"
        android:letterSpacing="0.1"
        android:textColorHint="@color/textColor"
        android:textSize="18dp" />

    <RelativeLayout
        android:layout_width="372dp"
        android:layout_height="186dp">

        <EditText
            android:id="@+id/desevt"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_marginStart="190dp"
            android:layout_marginLeft="190dp"
            android:layout_marginTop="101dp"
            android:background="#00000000"
            android:hint="Lieu d'arrivée"
            android:inputType="text"
            android:letterSpacing="0.1"
            android:textColorHint="@color/textColor"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/orgevt"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="100dp"
            android:background="#00000000"
            android:hint="Lieu de départ"
            android:inputType="text"
            android:letterSpacing="0.1"
            android:textColorHint="@color/textColor"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginBottom="90dp"
            android:background="@android:color/holo_green_dark"
            android:text="Lieu : "
            android:textColorHint="@color/textColor"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginBottom="154dp"
            android:background="@android:color/holo_green_dark"
            android:text="Type de l'événement : "
            android:textColorHint="@color/textColor"
            android:textSize="18sp" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="-155dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_rondo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/rondonner" />

            <RadioButton
                android:id="@+id/radio_camp"
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/camping" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginBottom="6dp"
            android:background="@android:color/holo_green_dark"
            android:text="Choisir date et heure :"
            android:textColorHint="@color/textColor"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="202dp">

        <EditText
            android:id="@+id/nbplacevt"
            android:layout_width="302dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="0dp"
            android:ems="10"
            android:hint="Nombre de places dsiponible"
            android:inputType="number" />

        <EditText
            android:id="@+id/prixevt"
            android:layout_width="61dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginBottom="38dp"
            android:ems="10"
            android:hint="Prix"
            android:inputType="number" />

        <Button
            android:id="@+id/heurfevt"
            android:layout_width="69dp"
            android:layout_height="58dp"
            android:layout_alignBottom="@id/button_date"
            android:layout_marginLeft="-69dp"
            android:layout_marginTop="@dimen/button_top_margin"
            android:layout_marginBottom="-65dp"
            android:layout_toRightOf="@id/button_date"
            android:onClick="showTimePickerDialog"
            android:text="Heure fin" />

        <Button
            android:id="@+id/button_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="7dp"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="@dimen/button_top_margin"
            android:onClick="showDatePickerDialog"
            android:text="Date de l'événement" />

        <Button
            android:id="@+id/heurdevt"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/button_date"
            android:layout_marginLeft="-173dp"
            android:layout_marginTop="@dimen/button_top_margin"
            android:layout_marginBottom="-63dp"
            android:layout_toRightOf="@id/button_date"
            android:onClick="showTimePickerDialog"
            android:text="Heure début" />

        <ImageView
            android:id="@+id/imageevt"
            android:layout_width="106dp"
            android:layout_height="126dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/imagebox"
            android:onClick="openImage"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="362dp"
        android:layout_height="127dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginBottom="90dp"
            android:background="@android:color/holo_green_dark"
            android:text="Moyen de transports :"
            android:textColorHint="@color/textColor"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_planifier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="84dp"
            android:layout_marginLeft="84dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:text="Planifier événement" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="37dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/bus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClickedTransport"
                android:text="@string/bus" />

            <RadioButton
                android:id="@+id/Train"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClickedTransport"
                android:text="@string/train" />

        </RadioGroup>

    </RelativeLayout>


</LinearLayout>