<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="wrap_content"
        android:layout_height="292dp"
        android:layout_gravity="center"
        android:layout_margin="6dp"
        android:elevation="1dp"
        card_view:cardCornerRadius="6dp">


        <LinearLayout
            android:layout_width="394dp"
            android:layout_height="292dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="394dp"
                android:layout_height="302dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/evtimage"
                    android:layout_width="wrap_content"
                    android:layout_height="59dp"
                    android:gravity="center"
                    android:src="@drawable/logo" />


                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:padding="@dimen/activity_vertical_margin">

                    <TableRow android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Titre"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" : "
                            android:textColor="@android:color/black" />

                        <TextView
                            android:id="@+id/text_titre"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black" />
                    </TableRow>

                    <TableRow android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="Type"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" : "
                            android:textColor="@android:color/black" />

                        <TextView
                            android:id="@+id/text_type"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:text="@string/origine"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" : "
                            android:textColor="@android:color/black" />

                        <TextView
                            android:id="@+id/text_org"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black" />
                    </TableRow>

                    <TableRow android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/destination"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" : "
                            android:textColor="@android:color/black" />

                        <TextView
                            android:id="@+id/text_des"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black" />
                    </TableRow>

                    <TableRow android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Date"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" : "
                            android:textColor="@android:color/black" />

                        <TextView
                            android:id="@+id/text_Date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black" />
                    </TableRow>

                    <TableRow android:layout_height="32dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="heur debut"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" : "
                            android:textColor="@android:color/black" />

                        <TextView
                            android:id="@+id/text_hd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black" />
                    </TableRow>
                    <TableRow android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/heur_fin"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" : "
                            android:textColor="@android:color/black" />

                        <TextView
                            android:id="@+id/text_hf"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black" />
                    </TableRow>
                    <TableRow android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Nombre de place"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" : "
                            android:textColor="@android:color/black" />

                        <TextView
                            android:id="@+id/text_nbp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black" />
                    </TableRow>
                    <TableRow android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Prix"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" : "
                            android:textColor="@android:color/black" />

                        <TextView
                            android:id="@+id/text_Prix"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black" />
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>

